force-app/main/default/objects/Branching_Logic__c/Branching_Logic__c.object-meta.xml
<CustomObject>
    <label>Branching Logic</label>
    <nameField>
        <label>Branching Logic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branching Logics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>