force-app/main/default/objects/Branching_Logic__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Key to the Youreka form object, so it can be referenced from the form(This field was created for NPL MA).</description>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>Branching Logics</relationshipLabel>
    <relationshipName>Branching_Logics_Form</relationshipName>
    <type>Lookup</type>
</CustomField>