force-app/main/default/objects/Branching_Logic__c/fields/Hazard_Source__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Source__c</fullName>
    <description>List of potential hazards associated to the critical step(This field was created for NPL MA).</description>
    <label>Hazard Source</label>
    <type>TextArea</type>
</CustomField>