force-app/main/default/objects/Branching_Logic__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Critical Work Steps</relationshipLabel>
    <relationshipName>Branching_Logics</relationshipName>
    <type>Lookup</type>
</CustomField>